<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.formulaire.UserFormFragment">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="373dp"
        android:layout_height="567dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstname_field"/>

            <EditText
                android:id="@+id/firstname_input"
                android:maxLength="20"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firstname" />

            <TextView
                android:textSize="15sp"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname_field"/>

            <EditText
                android:id="@+id/lastname_input"
                android:maxLength="20"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lastname" />

            <TextView
                android:textSize="15sp"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthdate_field"/>

            <EditText
                android:id="@+id/birthdate_input"
                android:maxLength="10"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthdate" />

            <TextView
                android:textSize="15sp"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_field"/>

            <RadioGroup
                android:id="@+id/sex_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/sex_male_radio_button"
                    android:textColor="@color/black"
                    android:text="@string/sex_male_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />
                <RadioButton
                    android:id="@+id/sex_female_radio_button"
                    android:textColor="@color/black"
                    android:text="@string/sex_female_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <TextView
                android:textSize="15sp"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/program_field"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="2dp"
                android:background="@color/colorPrimaryLightGrey">
                <Spinner
                    android:id="@+id/program_choice"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:popupBackground="@color/colorPrimaryLightGrey" />
            </RelativeLayout>
            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/submit_field"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>