<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.internet.InternetFragment">
       <Button
           android:id="@+id/internet_status_button"
           android:layout_width="0dp"
           android:layout_height="46dp"
           android:layout_marginStart="52dp"
           android:layout_marginLeft="52dp"
           android:layout_marginTop="104dp"
           android:layout_marginEnd="52dp"
           android:layout_marginRight="52dp"
           android:text="@string/navbar_internet_status"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <TextView
           android:id="@+id/indicator"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="150dp"
           android:text="@string/indicator"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/internet_status_text" />

       <ImageView
           android:id="@+id/internet_status_indicator"
           android:layout_width="400dp"
           android:layout_height="100dp"
           android:layout_gravity="center"
           android:layout_marginTop="76dp"
           android:contentDescription="@string/navbar_internet_status"
           android:src="@drawable/internet_status_indicator"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.505"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/indicator" />

       <TextView
           android:id="@+id/internet_status_text"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="80dp"
           android:text="@string/internet_status_no_connexion"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.495"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/internet_status_button" />
</androidx.constraintlayout.widget.ConstraintLayout>

